--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,5 @@ services:
       - ./data:/data
     environment:
       - DATA_DIR=/data
+      - PYTHONPATH=/app
+    command: uvicorn main:app --host 0.0.0.0 --port 3000 --reload
